# EcoSim

./: CMakeLists.txt  README.md  ecosystem_element.cpp  ecosystem_element.hpp  herbivore.cpp  herbivore.hpp  main.cpp  map_manager.cpp  map_manager.hpp  omnivore.cpp  omnivore.hpp  plant.cpp  plant.hpp  sim_utilities.cpp  sim_utilities.hpp  species_type.hpp  tests.cpp
default_input/: map.txt
test_input/: map.txt  species.txt
